changed width of instrument popup bottom scroll to auto to prevent gap

--- a/ooiui/static/css/common/scienceLayout.css
+++ b/ooiui/static/css/common/scienceLayout.css
@@ -434,7 +434,7 @@
 }
 
 .map-pop-container {
-  width: 460px;
+  width: auto;
   height: 125px;
   overflow-y: scroll;
   overflow-x: hidden;
